# charm-lib-kubernetes-snaps

./: pyproject.toml  test_requirements.txt  tox.ini
.github/workflows/: naming-lint-unit.yaml  publish-to-pypi.yaml
charms/: kubernetes_snaps.py
tests/unit/: test_kubernetes_snaps.py
