[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["charms"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[project]
name = "charms.kubernetes-snaps"
dynamic = ["version"]
authors = [
  {name="Adam Dyess", email="adam.dyess@canonical.com"},
  {name="Mateo Florido", email="mateo.florido@canonical.com"},
]
description = "Charm library for installing and configuring Kubernetes snaps"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "charm-lib-contextual-status@git+https://github.com/charmed-kubernetes/charm-lib-contextual-status@release_1.29",
  "ops",
  "PyYAML",
  "packaging",
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/charmed-kubernetes/charm-lib-kubernetes-snaps"
"Bug Tracker" = "https://github.com/charmed-kubernetes/charm-lib-kubernetes-snaps/issues"

[dependency-groups]
publish = ["twine"]
